--- a/example/todo-app/src/ui-components/styles.css
+++ b/example/todo-app/src/ui-components/styles.css
@@ -84,7 +84,7 @@
   border-radius: 5px;
   padding: 20px;
   margin-top: 15px;
-  background-image: url("https://img.freepik.com/free-photo/crumpled-yellow-paper-background-close-up_60487-2390.jpg?size=626&ext=jpg");
+  background-image: url('https://img.freepik.com/free-photo/crumpled-yellow-paper-background-close-up_60487-2390.jpg?size=626&ext=jpg');
   transition: 0.2s;
 }
 
