--- a/example/todo-app/src/app/App.css
+++ b/example/todo-app/src/app/App.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Neucha&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Neucha&display=swap');
 
 .App {
   width: 100vw;
@@ -7,7 +7,7 @@
   flex-direction: column;
   align-items: center;
   background-color: #002e60;
-  font-family: "Neucha", cursive;
+  font-family: 'Neucha', cursive;
 }
 
 .heading {
