--- a/example/todo-app/src/app/App.css
+++ b/example/todo-app/src/app/App.css
@@ -1,5 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Neucha&display=swap');
 
+* {
+  box-sizing: border-box;
+}
+html {
+  font-family: sans-serif;
+}
+
+body {
+  scrollbar-width: thin;
+  margin: 0;
+  overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+  height: 12px;
+  width: 5px;
+  background: #000;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #5f5f5f;
+}
+
+
 .App {
   width: 100vw;
   min-height: 100vh;
